examples/test/testpolicy3500.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3500
  namespace: namespace221
spec:
  podSelector:
    matchLabels:
      key32: value17
      key45: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value13
      podSelector:
        matchLabels:
          key45: value10
          key21: value41
